2017-09-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	Rename script/applciaiton DIRECTORY property to TARGET
	Rename amfetchumpd --directory argument to --target
	* amandad-src/amandad.c: Add debugging statement
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amrandom.pl, application-src/amraw.pl,
	  application-src/amsamba.pl, application-src/amstar.c,
	  application-src/amsuntar.pl,
	* application-src/amzfs-sendrecv.pl: Accept TARGET property
	* application-src/amzfs-snapshot.pl: Print TARGET property
	* perl/Amanda/Application/Zfs.pm: Use TARGET property
	* perl/Amanda/CheckDump.pm, perl/Amanda/Extract.pm,
	  perl/Amanda/FetchDump.pm, perl/Amanda/FetchDump/Application.pm,
	  perl/Amanda/FetchDump/ClientApplication.pm, perl/Amanda/Restore.pm,
	  perl/Amanda/Service/Restore.pm: s/directory/target/
	* server-src/amfetchdump.pl: --target argument
	* man/xml-source/amfetchdump.8.xml: Document --target argument

2017-09-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Restore.pm:i Fix Parsing properties

2017-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: Add comment
	* common-src/local-security.c: Check result of setregid and setreuid

2017-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Chapman Flack
	* common-src/local-security.c: Check the hostname is local
	* man/xml-source/amanda-auth.7.xml: Document what a localhost is
	* COPYRIGHT.BSD: New copytight file
	* AUTHORS: Add Chapman Flack

2017-08-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl:Add --icremental, --remove-full-wal and
	  --remove-incremental-wal properties
	* man/xml-source/ampgsql.8.xml: Document new properties

2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Check only VERSION_MAJOR and VESION_MINOR for
	  error code 1800002

2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>