@@ -49,7 +49,7 @@
 
 static int add_exclude(FILE *file_exclude, char *aexc, gboolean optional,
 		       messagelist_t *mlist);
-static int add_include(char *disk, char *device, FILE *file_include,
+static int add_include(const char *disk, const char *device, FILE *file_include,
 		       char *ainc, gboolean optional, messagelist_t *mlist);
 static char *build_name(char *disk, char *exin, messagelist_t *mlist);
 static char *get_name(char *diskname, char *exin, time_t t, int n);
@@ -219,8 +219,8 @@ add_exclude(
 
 static int
 add_include(
-    char          *disk,
-    char          *device,
+    const char    *disk,
+    const char    *device,
     FILE          *file_include,
     char          *ainc,
     int            optional,
@@ -364,6 +364,7 @@ build_exclude(
 char *
 build_include(
     dle_t         *dle,
+    char const    *dirname,
     messagelist_t *mlist)
 {
     char *filename;
@@ -385,7 +386,7 @@ build_include(
 	    if (dle->include_file) {
 		for (incl = dle->include_file->first; incl != NULL;
 		    incl = incl->next) {
-		    nb_exp += add_include(dle->disk, dle->device, file_include,
+		    nb_exp += add_include(dle->disk, dirname, file_include,
 				  incl->name, dle->include_optional, mlist);
 		}
 	    }
@@ -400,7 +401,7 @@ build_include(
 				amfree(ainc);
 				continue;
 			    }
-			    nb_exp += add_include(dle->disk, dle->device,
+			    nb_exp += add_include(dle->disk, dirname,
 						  file_include, ainc,
 						  dle->include_optional, mlist);
 			    amfree(ainc);
